--- a/css/styles.css
+++ b/css/styles.css
@@ -10961,12 +10961,13 @@ header.masthead {
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
   font-style: italic;
+  height: 5rem;
   line-height: 1.5rem;
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
-  font-size: 3.25rem;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 3.25rem;
   margin-bottom: 2rem;
@@ -10983,6 +10984,8 @@ header.masthead .masthead-heading {
     font-style: italic;
     line-height: 2.25rem;
     margin-bottom: 2rem;
+    height: 9rem;
+
   }
   header.masthead .masthead-heading {
     font-size: 4.5rem;
@@ -11322,8 +11325,8 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 #promociones {
-  max-width: 80%;  /* Ancho máximo del carrusel */
-  height: 665px;   /* Altura fija del carrusel */
+  max-width: 100%;  /* Ancho máximo del carrusel */
+  height: 500px;   /* Altura fija del carrusel */
   margin: auto;    /* Centrado */
   overflow: hidden;
   position: relative; /* Asegura que los botones de control sean posicionados relativo a este contenedor */
