--- a/css/styles.css
+++ b/css/styles.css
@@ -11397,3 +11397,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 .carousel-control-next {
   right: 10px; /* Ajusta la posición derecha */
 }
+
+a{
+  text-decoration: none;
+}
