--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ button,
 select,
 optgroup,
 textarea {
-  margin: 0;
+  margin: 2rem;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
@@ -1997,7 +1997,7 @@ progress {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 1rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
