--- a/css/styles.css
+++ b/css/styles.css
@@ -1996,7 +1996,7 @@ progress {
 
 .form-control {
   display: block;
-  width: 100%;
+  width: 19rem;
   padding: 1rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -2968,9 +2968,9 @@ textarea.form-control-lg {
 }
 
 .btn-dark {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #212529;
-  --bs-btn-border-color: #212529;
+  --bs-btn-color: #000000;
+  --bs-btn-bg: #dbe060;
+  --bs-btn-border-color: #dbe060;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #424649;
   --bs-btn-hover-border-color: #373b3e;
@@ -10963,15 +10963,14 @@ header.masthead .masthead-subheading {
   font-style: italic;
   height: 5rem;
   line-height: 1.5rem;
-  margin-bottom: 25px;
+  margin-bottom: 120px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
 header.masthead .masthead-heading {
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 3.25rem;
   margin-bottom: 2rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  height: auto;
+  width: 20rem;
 }
 
 @media (min-width: 768px) {
@@ -10979,11 +10978,11 @@ header.masthead .masthead-heading {
     padding-top: 10rem;
     padding-bottom: 12.5rem;
   }
+  
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
     font-style: italic;
     line-height: 2.25rem;
-    margin-bottom: 2rem;
     height: 9rem;
 
   }
@@ -10991,7 +10990,9 @@ header.masthead .masthead-heading {
     font-size: 4.5rem;
     font-weight: 700;
     line-height: 4.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2.5rem;
+    width: 30rem;
+
   }
 }
 #portfolio .portfolio-item {
